--- a/FCC/Registration Form/reg.css
+++ b/FCC/Registration Form/reg.css
@@ -21,4 +21,47 @@ form{
     max-width:500px;
     min-width:300px;
     width:60vw;
+    padding-bottom: 2em;
+}
+fieldset {
+    border: none;
+    padding: 2rem 0;
+    border-bottom: 3px solid rgb(59, 59, 79);
+}
+input,textarea,select{
+    width:100%;
+    margin-top:10px;
+    margin-bottom:0;
+    margin-left:0;
+    margin-right:0;
+    min-height: 2em;
+}
+.inline{
+    width: unset;
+    margin: 0 0.5em 0 0;
+    vertical-align:middle;
+}
+input,textarea{
+    background-color:#0a0a23;
+    border: 1px solid #0a0a23;
+    color:#ffffff;
+}
+input[type="submit"]{
+    display:block;
+    width:60%;
+    margin:1em auto;
+    height:2em;
+    font-size:1.1rem;
+    border-color:white;
+    background-color:#3b3b4f;
+    min-width: 300px;
+}
+fieldset:last-of-type {
+    border-bottom: none;
+}
+input[type="file"]{
+    padding:1px 2px;
+}
+a{
+    color:#dfdfe2;
 }
