--- a/FCC/Photo Gallery/gallery.css
+++ b/FCC/Photo Gallery/gallery.css
@@ -20,7 +20,21 @@ body {
     width: 100%;
     max-width: 350px;
     height: 300px;
+    object-fit: cover;
+    border-radius:10px;
 }
 .gallery {
     display: flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-items:center;
+    padding:20px 10px;
+    margin:0 auto;
+    max-width:1400px;
+    gap:16px;
+}
+.gallery::after{
+    content:"";
+    width:350px;
 }
