--- a/FCC/Quiz Webpage/quizz.css
+++ b/FCC/Quiz Webpage/quizz.css
@@ -1,3 +1,8 @@
+@media (prefers-reduced-motion: no-preference) {
+    * {
+      scroll-behavior: smooth;
+    }
+}  
 body {
     background: #f5f6f7;
     color: #1b1b32;
@@ -10,6 +15,10 @@ header {
     height: 50px;
     background-color: #1b1b32;
     display: flex;
+    justify-content:space-between;
+    align-items:center;
+    position:fixed;
+    top:0;
 }
   
 #logo {
@@ -22,6 +31,10 @@ header {
 h1 {
     color: #f1be32;
     font-size: min(5vw, 1.2em);
+    text-align:center;
+}
+main{
+    padding-top:25px;
 }
   
 nav {
@@ -33,6 +46,11 @@ nav {
 nav > ul {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap:wrap;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
 }
   
 h1,h2 {
@@ -41,6 +59,8 @@ h1,h2 {
   
 h2 {
     border-bottom: 4px solid #dfdfe2;
+    margin-top:0;
+    padding-top:60px;
 }
   
 .sr-only {
@@ -53,4 +73,91 @@ h2 {
     clip: rect(0, 0, 0, 0);
     white-space: nowrap;
     border: 0;
+}
+p::before{
+    content:"Question #";
+}
+nav > ul > li {
+    color: #dfdfe2;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    display: block;
+}
+li > a{
+    color:#dfdfe2;
+    text-decoration: none;
+}
+nav li:hover{
+    background-color:#dfdfe2;
+    color:#1b1b32;
+    cursor:pointer;
+}
+section{
+    width:80%;
+    margin:0 auto 10px;
+    max-width:600px;
+}
+.info {
+    padding: 10px 0 0 5px;
+}
+.formrow {
+    margin-top: 30px;
+    padding: 0px 15px;
+}
+  
+input {
+    font-size: 16px;
+}
+.info input{
+    width:50%;
+    text-align:left;
+}
+.info label{
+    width:10%;
+    min-width:55px;
+    text-align:right;
+}
+.info label, .info input{
+    display:inline-block;
+}
+.question-block{
+    text-align: left;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    padding-top: 5px;
+}
+p{
+    margin-top: 5px;
+    padding-left: 15px;
+    font-size: 20px;
+}
+.question{
+    padding-bottom:0;
+    border:none;
+}
+.answers-list{
+    list-style:none;
+    padding:0;
+}
+button{
+    display: block;
+    margin: 40px auto;
+    width: 40%;
+    padding: 15px;
+    font-size: 23px;
+    background: #d0d0d5;
+    border: 3px solid #3b3b4f;
+}
+footer{
+    display:flex;
+    justify-content:center;
+    background-color:#2a2a40;
+}
+footer,footer a {
+  color: #dfdfe2;
+}
+address {
+    text-align: center;
+    padding: 0.3em;
 }
