--- a/Frontend/Model Generator/gen.css
+++ b/Frontend/Model Generator/gen.css
@@ -9,7 +9,7 @@ body {
     top: 70%;
     left: 10%;
     width: 350px;
-    height: 80px;
+    height: 120px;
     font-size: 2rem;
     background: transparent;
     color: #fff;
@@ -17,7 +17,7 @@ body {
     border-radius: 10px;
     padding: 5px;
     box-shadow: 0 0 3px black;
-    transition: 0.5s;
+    transition: .5s;
 }
 
 #open-btn:hover {
@@ -39,4 +39,37 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    animation-name: animatemodal;
+    animation-duration: .4s;
+}
+
+#close-btn {
+    font-size: 3rem;
+}
+
+#close-btn {
+  cursor: pointer;
+  font-size: 3rem;
+  color: #ff0000;
+}
+
+#modal-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+@keyframes animatemodal {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+    to {
+        top: 50%;
+        opacity: 1;
+    }
 }
