--- a/Frontend/Model Generator/gen.css
+++ b/Frontend/Model Generator/gen.css
@@ -61,6 +61,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
+    background-color: rgba(0,0,0,0.2);
 }
 
 @keyframes animatemodal {
